Fix overflow in cards

--- a/style.scss
+++ b/style.scss
@@ -314,3 +314,7 @@ hr {
 div.entry {
    text-align: justify;
 }
+
+div.card-article {
+   overflow:hidden;
+}
